[gd_scene load_steps=14 format=2]

[ext_resource path="res://Sprites/Overlay/gray square.png" type="Texture" id=1]
[ext_resource path="res://Sprites/Props/Day_Sky.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Props/time_1-Sheet.png" type="Texture" id=3]
[ext_resource path="res://Scripts/EndingCutscene.gd" type="Script" id=4]
[ext_resource path="res://Scripts/CameraEndingCutscene.gd" type="Script" id=6]

[sub_resource type="OpenSimplexNoise" id=1]

[sub_resource type="Animation" id=2]
length = 10.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite2:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5, 2.5, 3.5, 4.5, 5.5, 6.5, 7.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 0, 1, 2, 3, 4, 5, 6 ]
}

[sub_resource type="Animation" id=3]
resource_name = "Wait_Time_Before_Screen_Shake"
length = 8.0

[sub_resource type="Animation" id=4]
resource_name = "Audio_FadeIn"
length = 9.0
tracks/0/type = "value"
tracks/0/path = NodePath("AudioStreamPlayer2:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2, 6, 9 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ -80.0, 0.0, 0.0, -80.0 ]
}

[sub_resource type="Animation" id=5]
resource_name = "Wait_Time_Before_Screen_Shake_SFX"
length = 7.3

[sub_resource type="Animation" id=6]
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3, 5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=7]
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=8]
length = 13.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2, 10.5, 13 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ -80.0, -6.058, -6.058, -80.0 ]
}

[node name="EndingCutscene" type="Node2D"]
script = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 98.0326, -42.3466 )
scale = Vector2( 187, 102.5 )
texture = ExtResource( 1 )

[node name="Sprite2" type="Sprite" parent="."]
texture = ExtResource( 3 )
hframes = 7

[node name="Camera2D" type="Camera2D" parent="."]
current = true
script = ExtResource( 6 )
noise = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Idle"
anims/Idle = SubResource( 2 )

[node name="AnimationPlayer2" type="AnimationPlayer" parent="."]
autoplay = "Wait_Time_Before_Screen_Shake"
anims/Wait_Time_Before_Screen_Shake = SubResource( 3 )

[node name="AnimationPlayer3" type="AnimationPlayer" parent="."]
autoplay = "Wait_Time_Before_Screen_Shake_SFX"
anims/Audio_FadeIn = SubResource( 4 )
anims/Wait_Time_Before_Screen_Shake_SFX = SubResource( 5 )

[node name="Sprite3" type="Sprite" parent="."]
position = Vector2( 64.4272, -32.9628 )
scale = Vector2( 186.977, 102.885 )
texture = ExtResource( 2 )

[node name="Fade_AnimationPlayer" type="AnimationPlayer" parent="Sprite3"]
autoplay = "Idle"
anims/Fade_ToWhite = SubResource( 6 )
anims/Idle = SubResource( 7 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
volume_db = -6.058
autoplay = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="AudioStreamPlayer"]
anims/Idle = SubResource( 8 )

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="."]
volume_db = -80.0
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="animation_finished" from="AnimationPlayer2" to="." method="_on_AnimationPlayer2_animation_finished"]
[connection signal="animation_finished" from="AnimationPlayer3" to="." method="_on_AnimationPlayer2_animation_finished"]
[connection signal="animation_finished" from="Sprite3/Fade_AnimationPlayer" to="." method="_on_Fade_AnimationPlayer_animation_finished"]
